--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Research</a>
+            <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/research">Research</a>
+
           </nav>
         </header>
       </div>
