--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/research">Research</a>
+            <a href="{{ site.baseurl }}/who_we_are">Who We Are</a>
 
           </nav>
         </header>
