--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/research">Research</a>
             <a href="{{ site.baseurl }}/who_we_are">Who We Are</a>
+            <a href="{{ site.baseurl }}/research">What We Do</a>
 
           </nav>
         </header>
