--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,11 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/who_we_are">Who We Are</a>
             <a href="{{ site.baseurl }}/research">What We Do</a>
+            <a href="{{ site.baseurl }}/about">How We Do It</a>
+            <a href="{{ site.baseurl }}/contact">Contact</a>
 
           </nav>
         </header>
