--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/who_we_are">Who We Are</a>
             <a href="{{ site.baseurl }}/research">What We Do</a>
-
+            <a href="{{ site.baseurl }}/methods">How We Do It</a>
           </nav>
         </header>
       </div>
