--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/home">Home</a>
             <a href="{{ site.baseurl }}/who_we_are">Who We Are</a>
             <a href="{{ site.baseurl }}/research">What We Do</a>
             <a href="{{ site.baseurl }}/methods">How We Do It</a>
