--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,12 @@
 
           <nav>
             <a href="{{ site.baseurl }}/home">Home</a>
-            <a href="{{ site.baseurl }}/who_we_are">Who We Are</a>
-            <a href="{{ site.baseurl }}/research">What We Do</a>
-            <a href="{{ site.baseurl }}/methods">How We Do It</a>
+            <a href="{{ site.baseurl }}/the_team">The Team</a>
+            <a href="{{ site.baseurl }}/research">Research</a>
+            <a href="{{ site.baseurl }}/publications">Publications</a>
+            <a href="{{ site.baseurl }}/funding">Funding</a>
+            <a href="{{ site.baseurl }}/news">News</a>
+            <a href="{{ site.baseurl }}/contact">Contact</a>
           </nav>
         </header>
       </div>
