--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/"><span>Home</span></a>
             <a href="{{ site.baseurl }}/home">Home</a>
             <a href="{{ site.baseurl }}/the_team">The Team</a>
             <a href="{{ site.baseurl }}/research">Research</a>
