--- a/_layouts/page_notitle.html
+++ b/_layouts/page_notitle.html
@@ -5,6 +5,6 @@ layout: default
 <article class="page">
 
   <div class="entry">
-    {{ content }}
+    {{ content | markdownify }}
   </div>
 </article>
